Initial WiP Frontend changes for PXE Boot installation method
